# Blockchain-data-analysis

./: .gitignore  Cargo.toml  README.md  about_testing.txt  eth_prices.csv  result.txt
data/: example.json
json/: handcrafted_for_testing.json
src/: main.rs
