[package]
name = "ethparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.37.0", features = ["full"] } 
eyre = "0.6.12"
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = {version = "1.0.201", features = ["derive"]}
rand = "0.8.5"
petgraph = "0.6.5"
fdg = {git = "https://github.com/grantshandy/fdg"}
clap = { version = "4.0", features = ["derive"] }
macroquad = "0.4.5"
