[package]
name = "ethparser"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.37.0", features = ["full"] } 
eyre = "0.6.12"
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = {version = "1.0.201", features = ["derive"]}
petgraph = "0.6.5"
csv = "1.3.0"
