[package]
name = "ethparser"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.37.0", features = ["full"] } 
eyre = "0.6.12"
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = {version = "1.0.201", features = ["derive"]}
petgraph = "0.6.5"
csv = "1.3.0"
use = "0.0.1-pre.0"
priority-queue = "2.0.3"
plotters = "0.3.6"
lazy_static = "1.4.0"
primitive-types = "0.12.2"
once_cell = "1.19.0"
strum = { version = "0.26.2", features = ["strum_macros"] }
strum_macros = "0.26.4"
